tests/source/floats/invalid/parser/invalid_type_specifier_2.c
int main(void) {
    /* "float double" is not a valid type specifier */
    float double d = 10.0;
    return 0;
}
